# SiftPR

./: .env.example  .gitignore  CLAUDE.md  LICENSE.md  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  codebase.rs  crypto.rs  db.rs  error.rs  github.rs  helpers.rs  indexer.rs  lib.rs  main.rs  utils.rs
src-tauri/src/ai/: client.rs  events.rs  json_extract.rs  mod.rs  model_config.rs  orchestrator.rs  prompts.rs  types.rs
src-tauri/src/ai/embeddings/: mod.rs
src-tauri/src/ai/mcp/: client.rs  mod.rs  transport.rs
src-tauri/src/ai/orchestrator/: agent_runner.rs  aggregator.rs  file_grouping.rs  mod.rs  triage.rs
src-tauri/src/ai/pipeline/: mod.rs  retrieval.rs
src-tauri/src/ai/tools/: executor.rs  formatter.rs  mod.rs
src-tauri/src/ai/tools/builtin/: mod.rs  read_file.rs  research.rs  search_repo.rs  semantic_search.rs  web_search.rs
src-tauri/src/parser/: chunker.rs  mod.rs
src-tauri/src/parser/languages/: mod.rs
src/components/: CommentToolbar.tsx  DebugPanel.tsx  Layout.tsx  TabBar.tsx
src/components/dashboard/: AddRepoByUrl.tsx  PRListItem.tsx  PRTree.tsx  RepoList.tsx
src/components/review/: AIAnalyticsPanel.tsx  AIContextPanel.tsx  AISummarySection.tsx  AgentResultCard.tsx  AnalysisHeader.tsx  AnalysisLoadingState.tsx  CommentInput.tsx  DiagnosticsTab.tsx  DiffNavToolbar.tsx  DiffPanel.tsx  ExpandableSection.tsx  OverviewPanel.tsx  PendingCommentDisplay.tsx  PrioritizedFileList.tsx  ReviewActionsBar.tsx  SubmitReviewDialog.tsx
src/components/settings/: AIModels.tsx  AIProviders.tsx  AgentCard.tsx  Agents.tsx  InternalAgentCard.tsx  LinkRepoForm.tsx  LinkedRepoCard.tsx  MCPServerManager.tsx  RepoIndexingPanel.tsx  RepoProfilePanel.tsx  Repositories.tsx  SettingsLayout.tsx  index.ts
src/components/ui/: accordion.tsx  dropdown-menu.tsx  tabs.tsx  tooltip.tsx
src/contexts/: AnalysisContext.tsx  AuthContext.tsx  TabsContext.tsx  ThemeContext.tsx
src/lib/: api.ts  exportAnalysis.ts  helpers.ts  hooks.ts  logger.ts  telemetry.ts  utils.ts
src/lib/constants/: agents.ts
src/lib/hooks/: useDiffPanel.ts  useDraftComments.ts  useReviewData.ts  useSubmitReview.ts
src/lib/types/: review.ts
src/lib/utils/: diff.ts
src/pages/: Home.tsx  Login.tsx  Review.tsx  Settings.tsx
